--- a/badal-sen-portfolio/src/Components/about/about.css
+++ b/badal-sen-portfolio/src/Components/about/about.css
@@ -1,15 +1,19 @@
 .about{
     width: 100%;
+}
+
+.carousel{
+    width: 100%;
+    height: 90vh;
+    align-items: center;
+    border: 1px solid red;
+    margin: auto;
+    display: flex;
+}
+
+.slide{
+    width: 100%;
     height: 100%;
 }
 
-.about > div{
-    height: 100%;
-    width: 100%;
-}
 
-.bac-img{
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
-} 
