--- a/badal-sen-portfolio/src/Components/about/about.css
+++ b/badal-sen-portfolio/src/Components/about/about.css
@@ -3,17 +3,17 @@
 }
 
 .carousel{
-    width: 70%;
-    height: 50vh;
+    width: 100%;
+    height: 90vh;
    text-align: center;
-    margin: 20px auto;
+    margin: 0px auto 100px auto;
     position: relative;
     overflow: visible;
 }
 
 .slide, .slick-slide{
     width: 100%;
-    height: 50vh;
+    height: 90vh;
 }
 
 .slick-list{
@@ -33,10 +33,10 @@
     padding: 5px 0;
 }
 .slick-next{
-    right: -50px;
+    right: 10px;
 }
 .slick-prev{
-    left: -50px;
+    left: 10px;
 }
 
 
