--- a/badal-sen-portfolio/src/Components/about/slider/slide3/slide3.css
+++ b/badal-sen-portfolio/src/Components/about/slider/slide3/slide3.css
@@ -10,12 +10,12 @@
 }
 
 .slide3 > .text-div{
-  width:39%;
+  width:30%;
   height: 100%;  
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: #008b8ba1;
+  background-color: hsl(222deg 85% 13%);
   align-items: center;
 }
 
@@ -26,7 +26,8 @@
 }
 
 .slide3 > .text-div > p{
-  color: rgb(241, 42, 198);
+  color: rgb(240 255 112);
+  font-size: 18px;
   margin: 5px 0;
 }
 
@@ -39,13 +40,21 @@
   color: #af0270;
   font-weight: 500;
   margin: 15px 0;
-  font-size: 20px
+  font-size: 20px;
+  cursor:pointer;
+}
+
+.slide3 > .text-div > button:hover{
+  background-color: #af0270;
+  color: white;
 }
 
 .slide3 > .img-div{
   height: 100%;
-  width: 60%;
+  width: 70%;
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .slide3 > .img-div > .overlay{
@@ -55,9 +64,9 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background: linear-gradient(270deg, #008b8ba1, #ffffff00);
+  background: linear-gradient(270deg, hsl(222deg 85% 13%), #ffffff00);
 }
 
 .slide3 > .img-div > img{
-  height: 85%;
+  width: 100%;
 }
